--- a/segments/gedung-ara/routers/lantai2-router.conf
+++ b/segments/gedung-ara/routers/lantai2-router.conf
@@ -30,3 +30,23 @@ ip dhcp pool hr
 network 10.1.6.0 255.255.255.224
 default-router 10.1.6.1
 ip dhcp excluded-address 10.1.6.1
+
+===== ROUTING CONFIG =====
+> LANTAI 1
+ip route 10.1.5.0 255.255.255.192 10.1.5.98
+ip route 10.1.5.64 255.255.255.224 10.1.5.98
+ip route 10.1.5.128 255.255.255.224 10.1.5.98
+
+> LANTAI 3
+ip route 10.1.6.128 255.255.255.128 10.1.5.100
+ip route 10.1.6.32 255.255.255.224 10.1.5.100
+
+> LANTAI 4
+ip route 10.1.6.64 255.255.255.192 10.1.5.101
+ip route 10.1.7.64 255.255.255.224 10.1.5.101
+ip route 10.1.7.0 255.255.255.192 10.1.5.101
+
+> LANTAI 5
+ip route 10.1.7.96 255.255.255.224 10.1.5.102
+ip route 10.1.7.160 255.255.255.240 10.1.5.102
+ip route 10.1.7.128 255.255.255.224 10.1.5.102
