--- a/segments/gedung-ara/routers/lantai4-router.conf
+++ b/segments/gedung-ara/routers/lantai4-router.conf
@@ -29,4 +29,24 @@ ip dhcp excluded-address 10.1.7.65
 ip dhcp pool hr
 network 10.1.7.0 255.255.255.192
 default-router 10.1.7.1
-ip dhcp excluded-address 10.1.7.1
+ip dhcp excluded-address 10.1.7.
+
+===== ROUTING CONFIG =====
+> LANTAI 1
+ip route 10.1.5.0 255.255.255.192 10.1.5.98
+ip route 10.1.5.64 255.255.255.224 10.1.5.98
+ip route 10.1.5.128 255.255.255.224 10.1.5.98
+
+> LANTAI 2
+ip route 10.1.5.192 255.255.255.192 10.1.5.99
+ip route 10.1.5.160 255.255.255.224 10.1.5.99
+ip route 10.1.6.0 255.255.255.224 10.1.5.99
+
+> LANTAI 3
+ip route 10.1.6.128 255.255.255.128 10.1.5.100
+ip route 10.1.6.32 255.255.255.224 10.1.5.100
+
+> LANTAI 5
+ip route 10.1.7.96 255.255.255.224 10.1.5.102
+ip route 10.1.7.160 255.255.255.240 10.1.5.102
+ip route 10.1.7.128 255.255.255.224 10.1.5.102
