--- a/segments/gedung-ara/routers/gedungara-router.conf
+++ b/segments/gedung-ara/routers/gedungara-router.conf
@@ -6,7 +6,7 @@ ip add 192.168.0.10 255.255.255.252
 int fa0/1
 ip add 10.1.5.97 255.255.255.248
 
-===== ROUTING CONFIG =====
+===== ROUTING STATIC CONFIG =====
 > LANTAI 1
 ip route 10.1.5.0 255.255.255.192 10.1.5.98
 ip route 10.1.5.64 255.255.255.224 10.1.5.98
@@ -30,3 +30,9 @@ ip route 10.1.7.0 255.255.255.192 10.1.5.101
 ip route 10.1.7.96 255.255.255.224 10.1.5.102
 ip route 10.1.7.160 255.255.255.240 10.1.5.102
 ip route 10.1.7.128 255.255.255.224 10.1.5.102
+
+===== ROUTING DYNAMIC (EIGRP) CONFIG =====
+router eigrp 100
+network 192.168.0.8 0.0.0.3
+network 10.0.0.0 0.255.255.255
+redistribute static metric 10000 100 255 1 1500
