--- a/segments/gedung-ara/routers/lantai1-router.conf
+++ b/segments/gedung-ara/routers/lantai1-router.conf
@@ -31,7 +31,9 @@ network 10.1.5.128 255.255.255.224
 default-router 10.1.5.129
 ip dhcp excluded-address 10.1.5.129
 
-===== ROUTING CONFIG =====
+===== ROUTING STATIC CONFIG =====
+ip route 0.0.0.0 0.0.0.0 10.1.5.97
+
 > LANTAI 2
 ip route 10.1.5.192 255.255.255.192 10.1.5.99
 ip route 10.1.5.160 255.255.255.224 10.1.5.99
