--- a/segments/gedung-utama/routers/gedungutama-router.conf
+++ b/segments/gedung-utama/routers/gedungutama-router.conf
@@ -58,3 +58,12 @@ ip dhcp pool layanan
 network 10.1.2.0 255.255.254.0
 default-router 10.1.2.1
 ip dhcp excluded-address 10.1.2.1
+
+==== ROUTING STATIC CONFIG =====
+ip route 0.0.0.0 0.0.0.0 10.1.5.97
+
+===== ROUTING DYNAMIC (EIGRP) CONFIG =====
+router eigrp 100
+network 192.168.0.4 0.0.0.3
+network 10.0.0.0 0.255.255.255
+redistribute static metric 10000 100 255 1 1500
