--- a/globals/edge-router.conf
+++ b/globals/edge-router.conf
@@ -11,3 +11,8 @@ ip add 192.168.0.5 255.255.255.252
 
 int fa3/0
 ip add 192.168.0.9 255.255.255.252
+
+===== ROUTING DYNAMIC (EIGRP) CONFIG =====
+router eigrp 100
+network 192.168.0.4 0.0.0.3
+network 192.168.0.8 0.0.0.3
