--- a/segments/gedung-ara/routers/lantai2-router.conf
+++ b/segments/gedung-ara/routers/lantai2-router.conf
@@ -31,7 +31,9 @@ network 10.1.6.0 255.255.255.224
 default-router 10.1.6.1
 ip dhcp excluded-address 10.1.6.1
 
-===== ROUTING CONFIG =====
+===== ROUTING STATIC CONFIG =====
+ip route 0.0.0.0 0.0.0.0 10.1.5.97
+
 > LANTAI 1
 ip route 10.1.5.0 255.255.255.192 10.1.5.98
 ip route 10.1.5.64 255.255.255.224 10.1.5.98
