--- a/segments/gedung-utama/routers/gedungutama-router.conf
+++ b/segments/gedung-utama/routers/gedungutama-router.conf
@@ -64,6 +64,7 @@ ip route 0.0.0.0 0.0.0.0 10.1.5.97
 
 ===== ROUTING DYNAMIC (EIGRP) CONFIG =====
 router eigrp 100
+no auto-summary
 network 192.168.0.4 0.0.0.3
 network 10.0.0.0 0.255.255.255
 redistribute static metric 10000 100 255 1 1500
