optimize eigrp and pat done

--- a/globals/edge-router.conf
+++ b/globals/edge-router.conf
@@ -16,3 +16,18 @@ ip add 192.168.0.9 255.255.255.252
 router eigrp 100
 network 192.168.0.4 0.0.0.3
 network 192.168.0.8 0.0.0.3
+
+===== PAT CONFIG =====
+access-list 1 permit 10.1.0.0 0.0.7.255
+access-list 1 permit 192.168.0.4 0.0.0.3
+access-list 1 permit 192.168.0.8 0.0.0.3
+int fa3/0
+ip nat inside
+int fa0/0
+ip nat inside
+int fa0/0
+ip nat outside
+ip nat inside source list 1 interface fa0/0 overload
+ip route 0.0.0.0 0.0.0.0 fa0/0
+router eigrp 100
+redistribute static
