gre tunnel done

--- a/globals/edge-router.conf
+++ b/globals/edge-router.conf
@@ -16,14 +16,18 @@ ip add 192.168.0.9 255.255.255.252
 router eigrp 100
 network 192.168.0.4 0.0.0.3
 network 192.168.0.8 0.0.0.3
+network 192.168.0.12 0.0.0.3
 
 ===== PAT CONFIG =====
-access-list 1 permit 10.1.0.0 0.0.7.255
+access-list 1 permit 10.1.0.0 0.0.15.255
 access-list 1 permit 192.168.0.4 0.0.0.3
 access-list 1 permit 192.168.0.8 0.0.0.3
+access-list 1 permit 192.168.0.12 0.0.0.3
 int fa3/0
 ip nat inside
-int fa0/0
+int fa2/0
+ip nat inside
+int fa1/0
 ip nat inside
 int fa0/0
 ip nat outside
