--- a/segments/gedung-utama/routers/gedungutama-router.conf
+++ b/segments/gedung-utama/routers/gedungutama-router.conf
@@ -3,22 +3,31 @@
 int fa0/0
 ip add 192.168.0.6 255.255.255.252
 
-int fa1/0
+int fa0/1 # VLAN interface -> trunk
+
+[VLAN]
+int fa0/1.10
+encapsulation dot1Q 10
 ip add 10.1.4.1 255.255.255.128
 
-int fa2/0
+int fa0/1.20
+encapsulation dot1Q 20
 ip add 10.1.0.1 255.255.254.0
 
-int fa3/0
+int fa0/1.30
+encapsulation dot1Q 30
 ip add 10.1.4.129 255.255.255.192
 
-int fa4/0
+int fa0/1.40
+encapsulation dot1Q 40
 ip add 10.1.4.193 255.255.255.224
 
-int fa5/0
+int fa0/1.50
+encapsulation dot1Q 50
 ip add 10.1.4.225 255.255.255.240
 
-int fa6/0
+int fa0/1.60
+encapsulation dot1Q 60
 ip add 10.1.2.1 255.255.254.0
 
 ===== DHCP CONFIG =====
@@ -59,12 +68,19 @@ network 10.1.2.0 255.255.254.0
 default-router 10.1.2.1
 ip dhcp excluded-address 10.1.2.1
 
-==== ROUTING STATIC CONFIG =====
-ip route 0.0.0.0 0.0.0.0 10.1.5.97
-
 ===== ROUTING DYNAMIC (EIGRP) CONFIG =====
 router eigrp 100
 no auto-summary
 network 192.168.0.4 0.0.0.3
 network 10.1.0.0 0.0.7.255
-redistribute static metric 10000 100 255 1 1500
+
+router eigrp 200
+no auto-summary
+network 172.16.0.0 0.0.0.3
+network 10.1.0.0 0.0.7.255
+
+===== GRE TUNNEL CONFIG =====
+int tunnel0
+ip add 172.16.0.1 255.255.255.252
+tunnel source fa0/0
+tunnel destination 192.168.0.14
