tunnel prioritize and connect all

--- a/segments/gedung-cabang/routers/gedungcabang-router.conf
+++ b/segments/gedung-cabang/routers/gedungcabang-router.conf
@@ -23,6 +23,7 @@ tunnel destination 192.168.0.6
 router eigrp 100
 no auto-summary
 network 192.168.0.12 0.0.0.3
+network 10.1.8.0 0.0.0.63
 
 router eigrp 200
 no auto-summary
