--- a/segments/gedung-utama/routers/gedungutama-router.conf
+++ b/segments/gedung-utama/routers/gedungutama-router.conf
@@ -68,6 +68,12 @@ network 10.1.2.0 255.255.254.0
 default-router 10.1.2.1
 ip dhcp excluded-address 10.1.2.1
 
+===== GRE TUNNEL CONFIG =====
+int tunnel0
+ip add 172.16.0.1 255.255.255.252
+tunnel source fa0/0
+tunnel destination 192.168.0.14
+
 ===== ROUTING DYNAMIC (EIGRP) CONFIG =====
 router eigrp 100
 no auto-summary
@@ -78,9 +84,4 @@ router eigrp 200
 no auto-summary
 network 172.16.0.0 0.0.0.3
 network 10.1.0.0 0.0.7.255
-
-===== GRE TUNNEL CONFIG =====
-int tunnel0
-ip add 172.16.0.1 255.255.255.252
-tunnel source fa0/0
-tunnel destination 192.168.0.14
+distance eigrp 89 169
