--- a/segments/gedung-ara/routers/gedungara-router.conf
+++ b/segments/gedung-ara/routers/gedungara-router.conf
@@ -4,36 +4,27 @@ int fa0/0
 ip add 192.168.0.10 255.255.255.252
 
 int fa0/1
-ip add 10.1.5.97 255.255.255.248
+ip add 10.1.16.1 255.255.255.248
 
 ===== ROUTING STATIC CONFIG =====
 > LANTAI 1
-ip route 10.1.5.0 255.255.255.192 10.1.5.98
-ip route 10.1.5.64 255.255.255.224 10.1.5.98
-ip route 10.1.5.128 255.255.255.224 10.1.5.98
+ip route 10.1.8.0 255.255.255.128 10.1.16.2
 
 > LANTAI 2
-ip route 10.1.5.192 255.255.255.192 10.1.5.99
-ip route 10.1.5.160 255.255.255.224 10.1.5.99
-ip route 10.1.6.0 255.255.255.224 10.1.5.99
+ip route 10.1.8.128 255.255.255.128 10.1.16.3
 
 > LANTAI 3
-ip route 10.1.6.128 255.255.255.128 10.1.5.100
-ip route 10.1.6.32 255.255.255.224 10.1.5.100
+ip route 10.1.9.0 255.255.255.0 10.1.16.4
 
 > LANTAI 4
-ip route 10.1.6.64 255.255.255.192 10.1.5.101
-ip route 10.1.7.64 255.255.255.224 10.1.5.101
-ip route 10.1.7.0 255.255.255.192 10.1.5.101
+ip route 10.1.10.0 255.255.255.0 10.1.16.5
 
 > LANTAI 5
-ip route 10.1.7.96 255.255.255.224 10.1.5.102
-ip route 10.1.7.160 255.255.255.240 10.1.5.102
-ip route 10.1.7.128 255.255.255.224 10.1.5.102
+ip route 10.1.11.0 255.255.255.128 10.1.16.6
 
 ===== ROUTING DYNAMIC (EIGRP) CONFIG =====
 router eigrp 100
 no auto-summary
 network 192.168.0.8 0.0.0.3
-network 10.1.0.0 0.0.7.255
+network 10.1.8.0/20 0.0.15.255
 redistribute static metric 10000 100 255 1 1500
