fix wrong subnetting

--- a/segments/gedung-ara/routers/gedungara-router.conf
+++ b/segments/gedung-ara/routers/gedungara-router.conf
@@ -3,7 +3,7 @@
 int fa0/0
 ip add 192.168.0.10 255.255.255.252
 
-int fa0/1
+int fa1/0
 ip add 10.1.16.1 255.255.255.248
 
 ===== ROUTING STATIC CONFIG =====
@@ -26,5 +26,5 @@ ip route 10.1.11.0 255.255.255.128 10.1.16.6
 router eigrp 100
 no auto-summary
 network 192.168.0.8 0.0.0.3
-network 10.1.8.0/20 0.0.15.255
+network 10.1.8.0 0.0.15.255
 redistribute static metric 10000 100 255 1 1500
